--- a/cart.html
+++ b/cart.html
@@ -12,10 +12,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        
 
        
 
-        <script type="text/javascript" src="js/LocalLogin.js"></script>
+        <script src="js/shopping-basket.js"></script>
 
     </head>
 
