--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         </header>
         <br>
-        <div class="slideshow-container">
+        <!--<div class="slideshow-container">
 
           <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
@@ -98,7 +98,7 @@
             <span class="dot"></span> 
             <span class="dot"></span> 
           </div>
-        <script src="js/slides.js"></script>
+        <script src="js/slides.js"></script>-->
     </body>
 
     </html>
