--- a/kids-shoes.html
+++ b/kids-shoes.html
@@ -210,7 +210,7 @@
         
 
         <script src="js/product-cards.js"></script>
-        <script src="js/slides.js"></script>
+        <script src="js/shopping-basket.js"></script>
     </body>
 
     </html>
